--- a/main.org
+++ b/main.org
@@ -966,3 +966,23 @@ alias em="emacsclient -c -a emacs"
     )
   (define-key evil-visual-state-map (kbd "<SPC> q") 'dy-quote)
 #+END_SRC
+
+* Google-translate
+#+BEGIN_SRC emacs-lisp :results output silent
+  (use-package google-translate
+    :ensure t
+    :config
+      (use-package google-translate-default-ui
+      :ensure t
+      :config
+       (define-key evil-normal-state-map (kbd "<SPC> l l") 'google-translate-at-point)
+       (define-key evil-normal-state-map (kbd "<SPC> l L") 'google-translate-at-point-reverse)
+
+       (define-key evil-normal-state-map (kbd "<SPC> L l") 'google-translate-query-translate)
+       (define-key evil-normal-state-map (kbd "<SPC> L L") 'google-translate-query-translate-reverse)
+
+       (setq google-translate-default-source-language "en")
+       (setq google-translate-default-target-language "ru")
+      )
+    )
+#+END_SRC
