--- a/main.org
+++ b/main.org
@@ -1002,7 +1002,7 @@ alias em="emacsclient -c -a emacs"
    'smerge-mode-hook
    (lambda()
      (define-key evil-normal-state-map (kbd "<SPC> j") 'smerge-next)
-     (define-key evil-normal-state-map (kbd "<SPC> k") 'smerge-pref)
+     (define-key evil-normal-state-map (kbd "<SPC> k") 'smerge-prev)
      (define-key evil-normal-state-map (kbd "<SPC> <SPC>") 'smerge-keep-current)
      (define-key evil-normal-state-map (kbd "<SPC> h") 'smerge-keep-other)
      (define-key evil-normal-state-map (kbd "<SPC> l") 'smerge-keep-mine)
