--- a/main.org
+++ b/main.org
@@ -40,6 +40,13 @@ Display line numbers
 (global-display-line-numbers-mode)
 #+END_SRC
 
+#+BEGIN_SRC emacs-lisp :results output silent
+  (setq gc-cons-threshold 100000000)
+  (setq read-process-output-max (* 1024 1024)) ;; 1mb
+#+END_SRC
+
+
+
 * Installing use-package
 ** Setup
 #+BEGIN_SRC emacs-lisp :results output silent
@@ -275,8 +282,8 @@ For evil bindigs
     :ensure t
     :custom
     (company-begin-commands '(self-insert-command))
-    (company-idle-delay .1)
-    (company-minimum-prefix-length 2)
+    (company-idle-delay 0.0)
+    (company-minimum-prefix-length 1)
     (company-show-numbers t)
     (company-tooltip-align-annotations 't)
     :config
@@ -538,6 +545,7 @@ For evil bindigs
     (setq lsp-prefer-flymake nil)
 
     (setq lsp-enable-snippet nil)
+    (setq lsp-idle-delay 0.500)
 
     ; (setq-default lsp-pyls-configuration-sources ["flake8"])
     (setq lsp-pyls-plugins-pycodestyle-enabled nil
@@ -550,7 +558,11 @@ For evil bindigs
      :ensure t
      :custom
      (lsp-ui-doc-enable nil)
+     :commands lsp-ui-mode
   )
+
+  ;; if you are ivy user
+  (use-package lsp-ivy :commands lsp-ivy-workspace-symbol)
 
   (use-package company-lsp 
      :ensure t
@@ -563,9 +575,6 @@ For evil bindigs
      :config
      (add-to-list 'company-backends 'company-lsp)
   )
-
-
-
 #+END_SRC
 
 #+BEGIN_SRC emacs-lisp :results output silent
