--- a/main.org
+++ b/main.org
@@ -46,7 +46,6 @@ Display line numbers
 #+END_SRC
 
 
-
 * Installing use-package
 ** Setup
 #+BEGIN_SRC emacs-lisp :results output silent
@@ -272,6 +271,14 @@ This is one of the things people usually want to change right away. By default, 
 For evil bindigs
 #+BEGIN_SRC emacs-lisp :results output silent
   (use-package evil-magit
+    :ensure t
+    )
+#+END_SRC
+
+* Forge
+#+BEGIN_SRC emacs-lisp :results output silent
+  (use-package forge
+    :after magit
     :ensure t
     )
 #+END_SRC
