--- a/main.org
+++ b/main.org
@@ -282,6 +282,16 @@ For evil bindigs
     )
 #+END_SRC
 
+* Magit-todos
+#+BEGIN_SRC emacs-lisp :results output silent
+  (use-package magit-todos
+    :after magit
+    :ensure t
+    :config 
+    (magit-todos-mode +1)
+    )
+#+END_SRC
+
 * Company-mode
 #+BEGIN_SRC emacs-lisp :results output silent
   (use-package company
