--- a/main.org
+++ b/main.org
@@ -218,6 +218,7 @@ This is one of the things people usually want to change right away. By default, 
     (define-key evil-normal-state-map (kbd "<SPC> l 5") 'eyebrowse-switch-to-window-config-5)
     (define-key evil-normal-state-map (kbd "<SPC> l 6") 'eyebrowse-switch-to-window-config-6)
     (define-key evil-normal-state-map (kbd "<SPC> g") 'magit-status)
+    (define-key evil-normal-state-map (kbd "<SPC> a") 'org-agenda)
 
     (define-key evil-normal-state-map (kbd "<SPC> c") 'comment-line)
     (define-key evil-visual-state-map (kbd "<SPC> c") 'comment-line)
@@ -581,6 +582,13 @@ For evil bindigs
 
      :config
      (add-to-list 'company-backends 'company-lsp)
+  )
+#+END_SRC
+
+
+#+BEGIN_SRC emacs-lisp :results output silent
+  (use-package lsp-ivy
+     :ensure t
   )
 #+END_SRC
 
