--- a/main.org
+++ b/main.org
@@ -340,11 +340,8 @@ For evil bindigs
 * Python
 ** Python mode
 #+BEGIN_SRC emacs-lisp :results output silent
-(use-package python-mode
-:custom
-;; indent in in def  args
-(python-indent-def-block-scale 1)
-)
+(require 'python)
+(setq python-indent-def-block-scale 1)
 #+END_SRC
 
 ** Virtualenv
