--- a/main.org
+++ b/main.org
@@ -751,6 +751,9 @@ For evil bindigs
     (org-startup-with-inline-images "inlineimages")
     (org-agenda-files (list "~/org/agenda.org"))
     (org-log-done 'time)
+    ;; Remove tab useless source block identation
+    (org-src-preserve-indentation nil)
+    (org-edit-src-content-indentation 0)
     :config
     (org-babel-do-load-languages
      'org-babel-load-languages
@@ -771,6 +774,8 @@ For evil bindigs
     (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
     (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
     (add-to-list 'org-structure-template-alist '("py" . "src python"))
+
+
   )
 
 #+END_SRC
