--- a/main.org
+++ b/main.org
@@ -966,33 +966,83 @@ alias em="emacsclient -c -a emacs"
 #+END_SRC
 
 * Mail
-; http://www.macs.hw.ac.uk/~rs46/posts/2014-01-13-mu4e-email-client.html
-; Install isync / mbsync
-; 
-; #+BEGIN_SRC emacs-lisp :results output silent
-; 
-; (add-to-list 'load-path "/opt/mu/mu4e")
-; 
-; (require 'mu4e)
-; 
-;     (setq mu4e-maildir (expand-file-name "~/email"))
-;     (setq mu4e-sent-folder   "/mail/Sent Items")
-;     (setq mu4e-drafts-folder "/mail/Drafts")
-;     (setq mu4e-trash-folder  "/mail/Trash")
-;     ; get mail
-;     (setq mu4e-get-mail-command "mbsync -a"
-;           mu4e-html2text-command "w3m -T text/html"
-;           mu4e-update-interval 120
-;           mu4e-headers-auto-update t
-;           mu4e-compose-signature-auto-include nil)
-;   
-;     (setq mu4e-maildir-shortcuts
-;           '( ("/mail/INBOX"               . ?i)
-;              ("/mail/Sent Items"   . ?s)
-;              ("/mail/Trash"       . ?t)
-;              ("/mail/Drafts"    . ?d)))
-; 
-; #+END_SRC
+
+#+BEGIN_SRC emacs-lisp :results output silent
+
+;; First sudo dnf install maildir-utils
+;; Setup mbrsync
+;; Then init mu
+;; mu init --maildir=~/mailbox --my-address=alexander.kapustin@quantumsoft.ru --my-address=akapustin@ambrahealth.com --my-address=dyens@mail.ru
+;; mu index
+
+(add-to-list 'load-path "/usr/share/emacs/site-lisp/mu4e")
+
+
+(defun enter-mu4e-context-ambra ()
+  (setq mu4e-drafts-folder   "/ambra/[Gmail]/Drafts"
+        mu4e-sent-folder "/ambra/[Gmail]/Sent Mail"
+        mu4e-refile-folder  "/ambra/[Gmail]/All Mail"
+        mu4e-trash-folder  "/ambra/[Gmail]/Trash"
+        mu4e-maildir-shortcuts
+        '((:maildir "/ambra/inbox"       :key ?i)
+          (:maildir "/ambra/[Gmail]/Sent Mail"  :key ?s)
+          (:maildir "/ambra/[Gmail]/Trash" :key ?t))))
+
+(defun enter-mu4e-context-quantumsoft ()
+  (setq mu4e-drafts-folder   "/quantumsoft/[Gmail]/Drafts"
+        mu4e-sent-folder "/quantumsoft/[Gmail]/Sent Mail"
+        mu4e-refile-folder  "/quantumsoft/[Gmail]/All Mail"
+        mu4e-trash-folder  "/quantumsoft/[Gmail]/Trash"
+        mu4e-maildir-shortcuts
+        '((:maildir "/quantumsoft/inbox"       :key ?i)
+          (:maildir "/quantumsoft/[Gmail]/Sent Mail"  :key ?s)
+          (:maildir "/quantumsoft/[Gmail]/Trash" :key ?t))))
+
+
+(use-package mu4e
+  :ensure nil
+  :config
+
+  ;; This is set to 't' to avoid mail syncing issues when using mbsync
+  (setq mu4e-change-filenames-when-moving t)
+
+  ;; Refresh mail using isync every 10 minutes
+  (setq mu4e-update-interval (* 10 60))
+  (setq mu4e-get-mail-command "mbsync -a")
+  (setq mu4e-maildir "~/mailbox")
+
+  (setq mu4e-contexts
+        (list
+         ;; Work account
+         (make-mu4e-context
+          :name "Ambra"
+          :match-func
+            (lambda (msg)
+              (when msg
+                (string-prefix-p "/ambra" (mu4e-message-field msg :maildir))))
+          :vars '((user-mail-address . "akapustin@ambrahealth.com")
+                  (user-full-name    . "Kapustin Alexander"))
+          :enter-func (lambda () (progn
+                              (mu4e-message "Entering Ambra Context")
+                              (enter-mu4e-context-ambra)))
+          :leave-func (lambda () (mu4e-message "Leave Ambra Context")))
+
+         ;; Personal account
+         (make-mu4e-context
+          :name "Quantumsoft"
+          :match-func
+            (lambda (msg)
+              (when msg
+                (string-prefix-p "/quantumsoft" (mu4e-message-field msg :maildir))))
+          :vars '((user-mail-address . "alexander.kapustin@quantumsoft.ru")
+                  (user-full-name    . "Kapustin Alexander"))
+          :enter-func (lambda () (progn
+                              (mu4e-message "Entering Quantumsoft Context")
+                              (enter-mu4e-context-quantumsoft)))
+          :leave-func (lambda () (mu4e-message "Leave Quantumsoft Context"))))))
+#+END_SRC
+
+
 
 
 #TODO https://github.com/emacs-evil/evil-collection
